# openrouter_api

./: Cargo.toml
src/: client.rs
src/api/: embeddings.rs  mod.rs
src/types/: embeddings.rs  mod.rs  provider.rs
src/utils/: retry.rs
src/utils/validation/: embeddings.rs  mod.rs
