[package]
name = "openrouter_api"
version = "0.1.0"
edition = "2021"
authors = ["rambo"]
description = "A Rust client library for the OpenRouter API"
license = "MIT"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.28", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
url = "2.5.7"
futures = "0.3.31"
async-stream = "0.3.6"
fastrand = "2.3.0"
tokio-util = { version = "0.7.17", features = ["codec", "io"] }
uuid = { version = "1.19.0", features = ["v4"] }
zeroize = { version = "1.8.2", features = ["derive"] }
regex = "1.12.2"
chrono = { version = "0.4.42", features = ["serde"] }
urlencoding = "2.1.3"
httpdate = "1.0.3"
tracing = { version = "0.1.43", optional = true }

[dev-dependencies]
tokio-test = "0.4.4"
wiremock = "0.6.5"
test-case = "3.3.1"
serial_test = "3.2.0"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
tracing = ["dep:tracing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = true
